<resources>
    <string name="app_name">iTubeApp</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_create_account">Create Account</string>
    <string name="hint_video_url">YouTube Video URL</string>
    <string name="btn_play">PLAY</string>
    <string name="btn_add_playlist">ADD TO PLAYLIST</string>
    <string name="btn_my_playlist">MY PLAYLIST</string>
    <string name="delete_entry">Delete</string>
</resources>
