<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- YouTube URL input -->
    <EditText
        android:id="@+id/etVideoUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_video_url"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <!-- PLAY button -->
    <Button
        android:id="@+id/btnPlayVideo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_play"
        app:layout_constraintTop_toBottomOf="@id/etVideoUrl"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <!-- ADD TO PLAYLIST -->
    <Button
        android:id="@+id/btnAddToPlaylist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_playlist"
        app:layout_constraintTop_toBottomOf="@id/btnPlayVideo"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <!-- MY PLAYLIST -->
    <Button
        android:id="@+id/btnMyPlaylist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_my_playlist"
        app:layout_constraintTop_toBottomOf="@id/btnAddToPlaylist"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
